--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "@sanity/telemetry": ["./src"],
       "@sanity/telemetry/react": ["./src/react"],
+      "@sanity/telemetry/events": ["./src/events"],
     }
   },
   "include": ["src", "examples"],
