--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,6 @@
 {
-  "semi": false
+  "bracketSpacing": false,
+  "plugins": ["prettier-plugin-packagejson"],
+  "semi": false,
+  "singleQuote": true
 }
