--- a/package.json
+++ b/package.json
@@ -56,7 +56,11 @@
     "pkg:build": "pkg build --strict",
     "pkg:check": "pkg check --strict",
     "type:check": "tsc --build",
-    "lint": "eslint . --ext .cjs,.js,.ts,.tsx"
+    "lint": "eslint . --ext .cjs,.js,.ts,.tsx",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "lint-staged": {
     "*": [
@@ -77,7 +81,7 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -90,9 +94,10 @@
     "prettier-plugin-packagejson": "^2.4.5",
     "rimraf": "^5.0.1",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9"
+    "vite": "^4.4.5",
+    "vitest": "^0.33.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=16.0.0"
   }
 }
