--- a/tsconfig.dist.json
+++ b/tsconfig.dist.json
@@ -2,9 +2,8 @@
   "extends": "./tsconfig.settings",
   "include": ["./src"],
   "compilerOptions": {
-    "rootDir": ".",
+    "rootDir": "./src",
     "outDir": "./dist",
-    "emitDeclarationOnly": true,
-    "resolveJsonModule": true
+    "emitDeclarationOnly": true
   }
 }
