--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "extends": "./tsconfig.settings",
-  "include": ["./*.cjs", "./*.ts", "./package.config.ts", "./src", "examples"],
+  "include": ["./package.config.ts", "./src", "./examples"],
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "./dist",
     "noEmit": true,
-    "resolveJsonModule": true
+    "paths": {
+      "@sanity/telemetry": ["./src"],
+      "@sanity/telemetry/events": ["./src/events"],
+      "@sanity/telemetry/react": ["./src/react"]
+    }
   }
 }
