--- a/package.json
+++ b/package.json
@@ -25,13 +25,6 @@
       "import": "./dist/index.js",
       "default": "./dist/index.js"
     },
-    "./events": {
-      "types": "./dist/events/index.d.ts",
-      "source": "./src/events/index.ts",
-      "require": "./dist/events/index.cjs",
-      "import": "./dist/events/index.js",
-      "default": "./dist/events/index.js"
-    },
     "./react": {
       "types": "./dist/react/index.d.ts",
       "source": "./src/react/index.ts",
@@ -88,8 +81,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "^7.8.1",
-    "typeid-js": "^0.3.0",
-    "zod": "^3.21.4"
+    "typeid-js": "^0.3.0"
   },
   "devDependencies": {
     "@sanity/pkg-utils": "^2.3.4",
