--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "license": "MIT",
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   },
   "author": "Bjørge Næss <bjoerge@sanity.io>",
   "type": "module",
