--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "vitest": "^0.33.0"
   },
   "peerDependencies": {
-    "react": "^18.2"
+    "react": "^18.2 || >=19.0.0-rc"
   },
   "engines": {
     "node": ">=16.0.0"
