--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -29,7 +29,6 @@
     "esModuleInterop": true,
     "allowImportingTsExtensions": false,
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "react-jsx"
+    "isolatedModules": true
   }
 }
